# geany-plugins

./: MAINTAINERS  Makefile.am  configure.ac
geanyctags/src/: geanyctags.c
geanygendoc/src/: ggd-plugin.c
geanyprj/src/: project.c  sidebar.c  xproject.c
geanyscript/: Makefile.am
geanyscript/src/: Makefile.am  main.c
geanyvim/: Makefile.am  README  THANKS  quickref.txt  vim-reference.txt
geanyvim/src/: Makefile.am  backend-geany.c  backend-geany.h  backend-viw.c  cmdline.c  cmdline.h  cmds.c  cmds.h  ex-cmds.h  ex-prompt.c  ex-prompt.h  ex_prompt.c  main.c  state.h  switch.c  switch.h  ui.h  ui_cmds.c  ui_cmds.h  utils.c  utils.h  vi.c  vi.h  vim.c  vim.h
gproject/: NEWS  README
gproject/src/: gproject-main.c  gproject-menu.c  gproject-project.c  gproject-project.h  gproject-sidebar.c  gproject-utils.c
vimode/: README
vimode/src/: Makefile.am  backend-geany.c  backend-viw.c  cmd-context.h  cmd-runner.c  cmd-runner.h  cmds-ex.c  cmds-ex.h  cmds.c  cmds.h  context.h  ex-cmds.c  ex-cmds.h  ex-prompt.h  excmd-prompt.c  excmd-runner.c  keypress.c  keypress.h  prompt-ex.c  prompt-ex.h  utils.c  utils.h  vi.c  vi.h
vimode/src/cmds/: changemode.c  changemode.h
